# sibyl-research-system

./: .gitignore  CLAUDE.md  README.md  README_CN.md  config.example.yaml  config.yaml.example  pyproject.toml  setup.sh
docs/: architecture.md  codex-integration.md  configuration.md  getting-started.md  mcp-servers.md  plugin-commands.md  setup-guide.md  ssh-gpu-setup.md
docs/plans/: 2026-03-09-background-lark-sync-plan.md  2026-03-17-gpu-scheduler-fixes.md
fars/: orchestrate.py  workspace.py
fars/prompts/: _common.md
plugin/commands/: _orchestration-loop.md  continue.md  debug.md  evolve.md  init.md  resume.md  start.md  stop.md
sibyl/: __init__.py  _paths.py  cli.py  config.py  demo.py  error_collector.py  event_logger.py  evolution.py  experiment_recovery.py  gpu_scheduler.py  orchestra_skills.py  orchestrate.py  reflection.py  runtime_assets.py  self_heal.py  sentinel.sh  workspace.py
sibyl/compute/: local_backend.py
sibyl/dashboard/: server.py
sibyl/orchestration/: constants.py  dashboard_data.py  experiment_actions.py  lifecycle.py  migration_cli.py  project_cli.py  reflection_postprocess.py  runtime_cli.py  simple_actions.py  state_machine.py
sibyl/prompts/: _common.md  _common_zh.md  _experiment_protocol.md  codex_reviewer.md  (+31 more)
tests/: conftest.py  test_compute_backend.py  test_control_plane_contracts.py  test_dashboard.py  test_demo.py  test_event_logger.py  test_experiment_recovery.py  test_gpu_scheduler.py  test_orchestra_skills.py  test_orchestrate.py  test_self_heal.py  test_sentinel.py  test_support.py  test_workspace.py
tools/: README.md
(+263 files in other folders)
